Reuse cache-probe accounting and cleanup
Use the existing test listener instead of owning a second aggregator
map. Keep selection metadata immutable and let the command dispatcher
own manifest validity.

Share the completion path for exclusive cache probes, which never
execute test actions. Avoid rebuilding label sets when selection does
not change.